--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,39 +3,64 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
+    android:background="@color/background_floating_material_dark">
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:id="@+id/linearLayout">
+        android:id="@+id/linearLayout"
+        android:layout_margin="5dp">
 
-        <Spinner
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/spinner"
-            android:spinnerMode="dropdown"/>
-
-        <Button
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button_save"
-            android:text="@string/save_button"
-            android:layout_gravity="center_horizontal|center_vertical"
-            android:onClick="submitGender"/>
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:id="@+id/textView"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/button_material_light"
+            android:textSize="40sp"
+            android:text="@string/locator_title"
+            android:layout_gravity="center_horizontal" />
+
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/set_male_button"
+            android:text="@string/set_male_button"
+            android:background="@color/button_material_dark"
+            android:theme="@style/AppTheme"
+            android:layout_marginBottom="5dp"
+            android:onClick="setMale" />
+
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/set_female_button"
+            android:text="@string/set_female_button"
+            android:onClick="setFemale"
+            android:background="@color/button_material_dark"
+            android:layout_marginBottom="5dp" />
+
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/set_ns_button"
+            android:text="@string/set_ns_button"
+            android:onClick="setNotSpecified"
+            android:background="@color/button_material_dark" />
+
+        <ProgressBar
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/progressBar"
+            android:visibility="invisible"
+            android:indeterminate="true"
+            android:layout_gravity="center_horizontal" />
 
     </LinearLayout>
-
-    <ProgressBar
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/progressBar"
-        android:layout_below="@+id/linearLayout"
-        android:layout_centerHorizontal="true"
-        android:visibility="invisible"
-        android:indeterminate="true"/>
 
 </RelativeLayout>
